# flash

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  basic_usage.py  provider_selection.py  retry_config.py  structured_output.py  tavily_search.py  tool_registration.py
flash/: __init__.py  client.py  config.py  providers.py  router.py
javaxFlash/: __init__.py  client.py  config.py  errors.py  models.py  providers.py  router.py  schema.py  tools.py  transport.py
lunox/: __init__.py  client.py  config.py  display.py  errors.py  models.py  providers.py  router.py  schema.py  tools.py  transport.py
tests/: test_client.py  test_config_and_router.py  test_transport_and_schema.py
