[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "javaxFlash"
version = "2.1.0"
description = "Lightweight local-first AI router with javaxFlash and DeepSeek."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Javas Antony" }
]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]
keywords = ["ai", "client", "router", "gemini", "deepseek"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
packages = ["javaxFlash"]

[project.urls]
"Homepage" = "https://pypi.org/project/javaxFlash/"
