[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "lunox"
version = "5.0.0"
description = "Lightweight Python AI client/router with async support, local tools, observability hooks, retries, structured output, and lightweight conversation history."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Javas Antony" }
]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]
keywords = ["ai", "client", "router", "sdk", "gemini", "deepseek", "lunox"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
tavily = [
  "tavily-python>=0.7.0",
]
dev = [
  "pytest>=9.0",
]

[tool.setuptools]
packages = ["lunox"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://pypi.org/project/lunox/"
